--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -107,7 +107,81 @@
     </div>
     <!-- mod_slide -->
 
+    <!-- mod_slide -->
+    <div class="step slide" data-x="5000" data-y="-500"  data-z="1" data-rotate="90">
+        <h2>SeaJs</h2>
+        <h2>提供简单、极致的模块化开发体验</h2>
+    </div>
+    <!-- mod_slide -->
 
+    <!-- mod_slide -->
+    <div class="step slide" data-x="5000" data-y="500"  data-z="1" data-rotate="90">
+        <div class="mod_con">
+            <h3>基于SeaJs的模块配置</h3>
+            <div class="pic_con">
+                <img src="css/img/code3.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- mod_slide -->
+
+    <!-- mod_slide -->
+    <div class="step slide" data-x="5000" data-y="1500"  data-z="1" data-rotate="90">
+        <div class="mod_con">
+            <h3>基于SeaJs的模块调用</h3>
+            <div class="pic_con">
+                <img src="css/img/code4.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- mod_slide -->
+
+    <!-- mod_slide -->
+    <div class="step slide" data-x="5000" data-y="2500"  data-z="1" data-rotate="90">
+        <div class="mod_con">
+            <h3>通过Seajs-Localcache插件实现Js本地缓存与版本控制</h3>
+            <div class="pic_con">
+                <img src="css/img/code5.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- mod_slide -->
+
+    <!-- mod_slide -->
+    <div class="step slide" data-x="5000" data-y="3500"  data-z="1" data-rotate="90">
+        <div class="mod_con">
+            <h3>存放在LocalStorage中的Js文件</h3>
+            <div class="pic_con">
+                <img src="css/img/code7.png" alt="">
+            </div>
+            <div class="pic_con">
+                <img src="css/img/code6.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- mod_slide -->
+
+    <!-- mod_slide -->
+    <div class="step slide" data-x="4000" data-y="4500"  data-z="1" data-rotate="180">
+        <div class="mod_con">
+            <h3>移动性能</h3>
+            <h4>加载性能优化</h4>
+            <ul>
+                <li>初始首屏之外的图片资源需延迟加载 </li>
+                <li>数据离线化，考虑将数据缓存在 localStorage</li>
+                <li>尽量使用CSS3代替图片</li>
+                <li>考虑2G网络情况下，js未加载完成时的页面交互操作问题</li>
+            </ul>
+            <h4>运行性能优化</h4>
+            <ul>
+                <li>尽可能使用事件代理($.on)，避免批量绑定事件($.bind)</li>
+                <li>尽可能减少移动端浏览器的Reflow行为（页面重绘）</li>
+                <li>灵活使用硬件加速（swipe插件默认添加了开启硬件加速的CSS3代码）</li>
+                <li>注意移动端浏览器中的300ms点击延迟问题（具体根据产品需求实现）</li>
+            </ul>
+        </div>
+    </div>
+    <!-- mod_slide -->
 </div>
 
 <script src="js/impress.js"></script>
