--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -182,6 +182,23 @@
         </div>
     </div>
     <!-- mod_slide -->
+
+    <!-- mod_slide -->
+    <div class="step slide" data-x="3000" data-y="4500"  data-z="1" data-rotate="180">
+        <div class="mod_con">
+            <h3>扩展阅读</h3>
+            <h4><a href="http://docs.spmjs.org/doc/" target="_blank">spmjs</a></h4>
+            <ul>
+                <li>spm 是 CMD 的包管理工具，需要和 Sea.js 配合使用。 </li>
+            </ul>
+            <h4><a href="https://github.com/madrobby/zepto" target="_blank">zepto</a></h4>
+            <ul>
+                <li><a href="https://www.evernote.com/shard/s142/sh/67a6e7b2-e52b-41f1-8405-c52ff6bce19a/19fee5b12ad60a5b4b6a114ebc75f3f9" target="_blank">用seajs模块规范 封装后的 zepto模块结构</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-- mod_slide -->
+
 </div>
 
 <script src="js/impress.js"></script>
