--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -193,7 +193,7 @@
             </ul>
             <h4><a href="https://github.com/madrobby/zepto" target="_blank">zepto</a></h4>
             <ul>
-                <li><a href="https://www.evernote.com/shard/s142/sh/67a6e7b2-e52b-41f1-8405-c52ff6bce19a/19fee5b12ad60a5b4b6a114ebc75f3f9" target="_blank">用seajs模块规范 封装后的 zepto模块结构</a></li>
+                <li><a href="https://www.evernote.com/shard/s142/sh/67a6e7b2-e52b-41f1-8405-c52ff6bce19a/19fee5b12ad60a5b4b6a114ebc75f3f9" target="_blank">用CMD模块规范 封装后的 zepto模块结构</a></li>
             </ul>
         </div>
     </div>
