--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -26,7 +26,7 @@
                 <p>爱<i>网络</i>，爱<i>摄影</i>，爱<i>自由</i>。</p>
                 <p>我是一个<em>前端工程师</em></p>
                 <p>我不是什么大神</p>
-				<p>&nbsp;&nbsp;&nbsp;&nbsp;住在广州<strong>荔湾区</strong></p>
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;住在广州<strong>海珠区</strong></p>
 				<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>2013年</strong>毕业&nbsp;&nbsp;<strong>90后</strong></p>
 			</span>
 		</div>
@@ -34,7 +34,7 @@
     <!-- mod_slide -->
 
     <!-- mod_slide -->
-    <div class="step slide" data-x="0" data-y="-1500"  data-z="1">
+    <!-- <div class="step slide" data-x="0" data-y="-1500"  data-z="1">
         <div class="mod_con1">
             <h3>响应式布局</h3>
             <div class="inner">
@@ -57,22 +57,22 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- mod_slide -->
 
     <!-- mod_slide -->
-    <div class="step slide" data-x="1000" data-y="-1500"  data-z="1">
+    <!-- <div class="step slide" data-x="1000" data-y="-1500"  data-z="1">
         <div class="mod_con">
             <h3>宽屏设备页面布局</h3>
             <div class="pic_con">
                 <img src="css/img/m2.png" alt="">
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- mod_slide -->
 
     <!-- mod_slide -->
-    <div class="step slide" data-x="2000" data-y="-1500"  data-z="1">
+    <!-- <div class="step slide" data-x="2000" data-y="-1500"  data-z="1">
         <div class="mod_con">
             <h3>改写Swipe插件</h3>
             <div class="pic_con">
@@ -82,73 +82,73 @@
                 <img src="css/img/m5.png" alt="">
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- mod_slide -->
 
     <!-- mod_slide -->
-    <div class="step slide" data-x="3000" data-y="-1500"  data-z="1">
+    <!-- <div class="step slide" data-x="3000" data-y="-1500"  data-z="1">
         <div class="mod_con">
             <h3>改写Swipe插件</h3>
             <div class="pic_con">
                 <img src="css/img/code1.png" alt="">
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- mod_slide -->
 
     <!-- mod_slide -->
-    <div class="step slide" data-x="4000" data-y="-1500"  data-z="1">
+    <!-- <div class="step slide" data-x="4000" data-y="-1500"  data-z="1">
         <div class="mod_con">
             <h3>改写Swipe插件</h3>
             <div class="pic_con">
                 <img src="css/img/code2.png" alt="">
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- mod_slide -->
 
     <!-- mod_slide -->
-    <div class="step slide" data-x="5000" data-y="-500"  data-z="1" data-rotate="90">
+    <!-- <div class="step slide" data-x="5000" data-y="-500"  data-z="1" data-rotate="90">
         <h2>SeaJs</h2>
         <h2>提供简单、极致的模块化开发体验</h2>
-    </div>
+    </div> -->
     <!-- mod_slide -->
 
     <!-- mod_slide -->
-    <div class="step slide" data-x="5000" data-y="500"  data-z="1" data-rotate="90">
+    <!-- <div class="step slide" data-x="5000" data-y="500"  data-z="1" data-rotate="90">
         <div class="mod_con">
             <h3>基于SeaJs的模块配置</h3>
             <div class="pic_con">
                 <img src="css/img/code3.png" alt="">
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- mod_slide -->
 
     <!-- mod_slide -->
-    <div class="step slide" data-x="5000" data-y="1500"  data-z="1" data-rotate="90">
+    <!-- <div class="step slide" data-x="5000" data-y="1500"  data-z="1" data-rotate="90">
         <div class="mod_con">
             <h3>基于SeaJs的模块调用</h3>
             <div class="pic_con">
                 <img src="css/img/code4.png" alt="">
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- mod_slide -->
 
     <!-- mod_slide -->
-    <div class="step slide" data-x="5000" data-y="2500"  data-z="1" data-rotate="90">
+    <!-- <div class="step slide" data-x="5000" data-y="2500"  data-z="1" data-rotate="90">
         <div class="mod_con">
             <h3>通过Seajs-Localcache插件实现Js本地缓存与版本控制</h3>
             <div class="pic_con">
                 <img src="css/img/code5.png" alt="">
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- mod_slide -->
 
     <!-- mod_slide -->
-    <div class="step slide" data-x="5000" data-y="3500"  data-z="1" data-rotate="90">
+    <!-- <div class="step slide" data-x="5000" data-y="3500"  data-z="1" data-rotate="90">
         <div class="mod_con">
             <h3>存放在LocalStorage中的Js文件</h3>
             <div class="pic_con">
@@ -158,11 +158,11 @@
                 <img src="css/img/code6.png" alt="">
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- mod_slide -->
 
     <!-- mod_slide -->
-    <div class="step slide" data-x="4000" data-y="4500"  data-z="1" data-rotate="180">
+    <!-- <div class="step slide" data-x="4000" data-y="4500"  data-z="1" data-rotate="180">
         <div class="mod_con">
             <h3>移动性能</h3>
             <h4>加载性能优化</h4>
@@ -180,11 +180,11 @@
                 <li>注意移动端浏览器中的300ms点击延迟问题（具体根据产品需求实现）</li>
             </ul>
         </div>
-    </div>
+    </div> -->
     <!-- mod_slide -->
 
     <!-- mod_slide -->
-    <div class="step slide" data-x="3000" data-y="4500"  data-z="1" data-rotate="180">
+    <!-- <div class="step slide" data-x="3000" data-y="4500"  data-z="1" data-rotate="180">
         <div class="mod_con">
             <h3>扩展阅读</h3>
             <h4><a href="http://docs.spmjs.org/doc/" target="_blank">spmjs</a></h4>
@@ -196,7 +196,7 @@
                 <li><a href="https://www.evernote.com/shard/s142/sh/67a6e7b2-e52b-41f1-8405-c52ff6bce19a/19fee5b12ad60a5b4b6a114ebc75f3f9" target="_blank">用CMD模块规范 封装后的 zepto模块结构</a></li>
             </ul>
         </div>
-    </div>
+    </div> -->
     <!-- mod_slide -->
 
 </div>
